# doodle-bin

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  requirements.txt  test_index.html
.github/: ecr-publish.yaml
.github/workflows/: ecr-publish.yaml
doodle-bin/: main.py
doodle-bin/static/css/: styles.css
doodle-bin/templates/: index.html  widget_index.html
src/: main.rs
static/css/: styles.css
templates/: index.html.hbs
